--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,7 @@
             
             <main>
               <p>
-                इस कार्य में हम <strong>NED-2020</strong> के निपुण भारत मिशन अन्तर्गत <strong>NCERT</strong> द्वारा विकसित मार्गदर्शिका 
+                इस कार्य में हम <strong>NEP-2020</strong> के निपुण भारत मिशन अन्तर्गत <strong>NCERT</strong> द्वारा विकसित मार्गदर्शिका 
                 नियामेश की अनुशंसा पर आधारित प्रखण्ड शिक्षा पदाधिकारी के मार्गदर्शन में प्रशिक्षकों द्वारा अधीनस्थ प्राथमिक एवं मध्य 
                 विद्यालय के प्रधानाध्यापक तथा कक्षा-1 के नामित शिक्षक-शिक्षिकाओं को 
                 <strong>26 अगस्त से 30 अगस्त 2022</strong> एवं <strong>31 अगस्त से 04 सितम्बर 2022</strong> तक दिए गए 
