Add new content
fix: error in docs and fix bug

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button id="SB" type="submit">Sign Up</button>
         <samp class="hr"></samp>
         <div class="other">
-            <a>Admin</a> | <a>LogIn</a>
+            <a>Admin</a> | <a href="login.html">LogIn</a>
         </div>
     </div>
     <script src="script/signup.js" type="module" defer></script>
