--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/chahak_.png" type="image/png">
+  <link rel="icon" href="assest/chahak_.png" type="image/png">
 
   <!-- External CSS -->
   <link rel="stylesheet" href="style/dashboard.css">
@@ -31,7 +31,7 @@
         <p>
           इस कोर्स में हम <strong>NEP-2020</strong> के निपुण भारत मिशन अन्तर्गत <strong>NCERT</strong> द्वारा विकसित
           मार्गदर्शिका
-          नियामेश की अनुशंसा पर आधारित प्रखण्ड शिक्षा पदाधिकारी के मार्गदर्शन में प्रशिक्षकों द्वारा अधीनस्थ प्राथमिक
+          <q>विद्या-प्रवेश</q> की अनुशंसा पर आधारित प्रखण्ड शिक्षा पदाधिकारी के मार्गदर्शन में प्रशिक्षकों द्वारा चौथम प्रखंड धीन प्राथमिक
           एवं मध्य
           विद्यालय के प्रधानाध्यापक तथा कक्षा-1 के नामित शिक्षक-शिक्षिकाओं को
           <strong>26 अगस्त से 30 अगस्त 2022</strong> एवं <strong>31 अगस्त से 04 सितम्बर 2022</strong> तक दिए गए
@@ -42,33 +42,47 @@
         <section class="message">
           <h2>संदेश</h2>
           <p>
-            राज्य सरकार द्वारा निपुण बिहार कार्यक्रम का संचालन बच्चों में बुनियादी साक्षरता एवं संख्याज्ञान को विकसित
+            &nbsp;&nbsp;&nbsp;राज्य सरकार द्वारा निपुण बिहार कार्यक्रम का संचालन बच्चों में बुनियादी साक्षरता एवं संख्याज्ञान को विकसित
             करने के
-            उद्देश्य से आरम्भ किया गया। १ वर्ष तक के बच्चों की विद्यालय में नियमित उपस्थिति के साथ-साथ सुलभ गतिविधियों
+            उद्देश्य से आरम्भ किया गया। 9 वर्ष तक के बच्चों की विद्यालय में नियमित उपस्थिति के साथ-साथ सुलभ गतिविधियों
             के
             माध्यम से सीखने के अवसर उपलब्ध कराकर उत्साह उत्पन्न करें।
-          </p>
+          </p><br>
           <p>
-            आशा है कि <strong>‘चहक’</strong> कक्षा एक के नव-नामांकित छात्रों के लिए उपयोगी होगा तथा बच्चों का विद्यालय
+            &nbsp;&nbsp;&nbsp;आशा है कि <strong>‘चहक’</strong> कक्षा एक के नव-नामांकित छात्रों के लिए उपयोगी होगा तथा बच्चों का विद्यालय
             से
             जुड़ाव सुदृढ़ करने में सहायक होगा। इसे <strong>SCERT</strong> ने राज्य के विशेषज्ञों के महत्वपूर्ण योगदान से
             ३ महीने का स्कूल रेडिनेस मॉड्यूल तैयार किया है। इसके लिए आवश्यक है कि विद्यालय का माहौल, सीखने-सिखाने का
             तरीका बच्चों के अनुकूल हो।
-          </p>
+          </p><br>
           <p>
-            सबसे महत्वपूर्ण यह है कि <q>बच्चों को हम क्या पढ़ा रहे हैं इसकी तुलना में हम कैसे पढ़ा रहे हैं।</q> हर
+            &nbsp;&nbsp;&nbsp;सबसे महत्वपूर्ण यह है कि <q>बच्चों को हम क्या पढ़ा रहे हैं इसकी तुलना में हम कैसे पढ़ा रहे हैं।</q> हर
             मॉड्यूल के माध्यम से
-            बच्चों में शारीरिक विकास, भाषा विकास, सामाजिक विकास, रचनात्मकता और संज्ञानात्मक विकास को साधने का प्रयास
+            बच्चों में शारीरिक विकास, भाषा विकास, सामाजिक विकास, रचनात्मकता और संज्ञानात्मक विकास समग्रता में हो सके साधने का प्रयास
             किया गया है।
           </p>
           <div class="sign">
-            <img src="assest/signature.png" alt="">
+
+            <div class="s">
+              <img src="assest/signature.png" alt="">
+            </div>
+            <div class="one">
+              <div class="pic">
+               <img src="assest/picbeo.png" alt="">
+             </div>
+ 
+             <div class="bio">
+               <P class="name">ARVIND KUMAR</P>
+               <p class="des">B.E.O. CHAUTHAM<br>District-KHAGARIA</p>
+             </div>
+            </div>
+
           </div>
         </section><br><br>
         <section class="msg2">
-          <i>आदरणीय शिक्षक बंधु,</i>
+          <i>&nbsp;&nbsp;&nbsp;आदरणीय शिक्षक बंधु,</i>
     <p>
-        'चहक' की नवीनतम पुस्तक में बच्चों के सम्पूर्ण विकास (भाषा विकास, शारीरिक विकास, सामाजिक एवं भावनात्मक विकास, संख्यात्मक विकास एवं पर्यावरणीय जागरूकता) के लिए प्रक्रिया सम्मिलित है। ये गतिविधियाँ चहक गतिविधि कैलेण्डर के अनुसार चलेगी। कार्यदिवस की गतिविधियाँ 1 पघंटे में पूर्ण हो।
+        'चहक' की नवीनतम पुस्तक में बच्चों के सम्पूर्ण विकास (भाषा विकास, शारीरिक विकास, सामाजिक एवं भावनात्मक विकास, संख्यात्मक विकास एवं पर्यावरणीय जागरूकता) के लिए प्रक्रिया सम्मिलित है। ये गतिविधियाँ चहक गतिविधि कैलेण्डर के अनुसार चलेगी। कार्यदिवस की गतिविधियाँ 3 घंटे में पूर्ण हो।
     </p>
     <h2>मुख्य बिन्दुः</h2>
     <ul>
@@ -96,10 +110,15 @@
     </div>
     <!-- <p class="p-a">आपके द्वारा पूरा किए गए मॉड्यूल</p>
     <ul id="moduleList"></ul> -->
+    <div class="cont">
+      <p>प्रशिक्षक</p>
+      <video src="assest/cont.mp4" width="360" autoplay preload="auto" loop style="border-radius: 20px;"></video>
+    </div>
     <button id="continueButton">मॉड्यूल शुरू करे</button>
-
+    <button id="certificate">Certificate</button>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
   <script src="script/dashboard.js" type="module" defer></script>
-</body>
 
+</body>
 </html>
