--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="twitter:description" content="Explore modules on yoga and other activities, complete quizzes, and earn certificates with Chahak.">
   <meta name="twitter:image" content="https://prince-gh.github.io/chahak/images/certificate-preview.png">
 
-    <title>Chahak</title>
+    <title>SignUP - Chahak</title>
 </head>
 <body>
     <div class="container">
@@ -40,7 +40,7 @@
         <input type="number" name="ContactNumber" id="CN" placeholder="Contact Number">
         <input type="password" name="password" id="PW" placeholder="Password">
         <button id="SB" type="submit">Sign Up</button>
-        <samp class="hr"></samp>
+        <samp class="hr"></samp>.
         <div class="other">
             <a>Admin</a> | <a href="login.html">LogIn</a>
         </div>
