--- a/login.html
+++ b/login.html
@@ -21,7 +21,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="assest/index_logo.gif" width="150px" alt="logo" class="logo">
+        <p>चहक</p>
+        <img src="assest/logo_index.gif"  alt="logo" class="logo">
         <input type="text" id="loginName" placeholder="Full Name" required>
         <input type="password" id="loginPassword" placeholder="Password" required>
         <button id="loginButton" type="submit">Log In</button>
