--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
 </head>
 <body>
     <div class="container">
-        <img src="assest/index_logo.gif" width="150px" alt="logo" class="logo">
-        <input type="text" name="fullName" id="FN" placeholder="FullName">
+        <p>चहक</p>
+        <img src="assest/logo_index.gif"  alt="logo" class="logo">
+        <input type="text" name="fullName" id="FN" placeholder="Full Name">
+        <input type="text" name="schoolName" id="SN" placeholder="School Name">
         <input type="number" name="ContactNumber" id="CN" placeholder="Contact Number">
         <input type="password" name="password" id="PW" placeholder="Password">
         <button id="SB" type="submit">Sign Up</button>
-        <samp class="hr"></samp>.
+        <samp class="hr"></samp>
         <div class="other">
             <a>Admin</a> | <a href="login.html">LogIn</a>
         </div>
